--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,12 +1,11 @@
-FROM pytorch/pytorch:1.13.1-cuda11.6-cudnn8-devel
+FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-devel
 
-RUN pip install rasterio==1.3.7 \
+RUN pip install rasterio==1.3.7 shapely==2.0.1 \
+    accelerate==0.20.3 bitsandbytes==0.39.1 einops==0.6.1 transformers==4.30.2 \
     pytorch-metric-learning==2.1.2 \
-    pyarrow==12.0.1 \
-    pandas==2.0.2 \
-    geopandas==0.13.2 \
-    shapely==2.0.1
+    pandas==2.0.2 geopandas==0.13.2 pyarrow==12.0.1
+RUN pip install sentence-transformers==2.2.2 InstructorEmbedding==1.0.1
 
 WORKDIR /workdir
 
-# docker build -f Dockerfile -t timeseries:1.13.1-cuda11.6-cudnn8-devel .
+# docker build -f Dockerfile -t timeseries:2.0.1-cuda11.7-cudnn8-devel .
