--- a/docker/Dockerfile.jupyter
+++ b/docker/Dockerfile.jupyter
@@ -1,10 +1,9 @@
 FROM timeseries:2.0.1-cuda11.7-cudnn8-devel
 
-RUN pip install jupyter
-RUN pip install numpy scikit-learn matplotlib
+RUN --mount=type=cache,target=/root/.cache/pip pip install jupyter numpy scikit-learn matplotlib
 
 EXPOSE 8888
 
 CMD ["jupyter", "notebook", "--ip='*'", "--port=8888", "--no-browser", "--allow-root"]
 
-# docker build -f Dockerfile.jupyter -t timeseries:2.0.1-cuda11.7-cudnn8-jupyter .
+# DOCKER_BUILDKIT=1 docker build --build-arg BUILDKIT_INLINE_CACHE=1 -f Dockerfile.jupyter -t timeseries-jupyter .
